{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 96,
  "lineage": "a530ba69-43c3-e7cb-46b0-cda50adbf9cd",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "validator_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838693051036:internet-gateway/igw-0c197294fff722b33",
            "id": "igw-0c197294fff722b33",
            "owner_id": "838693051036",
            "region": "us-east-1",
            "tags": {
              "Name": "validator-igw"
            },
            "tags_all": {
              "Name": "validator-igw"
            },
            "vpc_id": "vpc-0823e2a14f6aa023f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_vpc.validator_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "validator_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:838693051036:loadbalancer/app/validator-lb/047eef966c56b0cf",
            "arn_suffix": "app/validator-lb/047eef966c56b0cf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "validator-lb-727503296.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:838693051036:loadbalancer/app/validator-lb/047eef966c56b0cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "validator-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08cac865d80460825"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0326c3f0b0293b419"
              },
              {
                "subnet_id": "subnet-09d712845cafa5f2a"
              }
            ],
            "subnets": [
              "subnet-0326c3f0b0293b419",
              "subnet-09d712845cafa5f2a"
            ],
            "tags": {
              "Name": "validator-lb"
            },
            "tags_all": {
              "Name": "validator-lb"
            },
            "vpc_id": "vpc-0823e2a14f6aa023f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:838693051036:loadbalancer/app/validator-lb/047eef966c56b0cf"
          },
          "dependencies": [
            "module.ecs.aws_security_group.validator_sg",
            "module.ecs.aws_subnet.validator_subnet_1",
            "module.ecs.aws_subnet.validator_subnet_2",
            "module.ecs.aws_vpc.validator_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "validator_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:838693051036:listener/app/validator-lb/047eef966c56b0cf/e031bfcc25cca3ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:838693051036:targetgroup/validator-tg/b4dbc90218197592",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:838693051036:listener/app/validator-lb/047eef966c56b0cf/e031bfcc25cca3ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:838693051036:loadbalancer/app/validator-lb/047eef966c56b0cf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:838693051036:listener/app/validator-lb/047eef966c56b0cf/e031bfcc25cca3ee"
          },
          "dependencies": [
            "module.ecs.aws_lb.validator_lb",
            "module.ecs.aws_lb_target_group.validator_tg",
            "module.ecs.aws_security_group.validator_sg",
            "module.ecs.aws_subnet.validator_subnet_1",
            "module.ecs.aws_subnet.validator_subnet_2",
            "module.ecs.aws_vpc.validator_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "validator_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:838693051036:targetgroup/validator-tg/b4dbc90218197592",
            "arn_suffix": "targetgroup/validator-tg/b4dbc90218197592",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:838693051036:targetgroup/validator-tg/b4dbc90218197592",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:838693051036:loadbalancer/app/validator-lb/047eef966c56b0cf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "validator-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0823e2a14f6aa023f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:838693051036:targetgroup/validator-tg/b4dbc90218197592"
          },
          "dependencies": [
            "module.ecs.aws_vpc.validator_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "validator_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838693051036:route-table/rtb-0f5d4f991953d4cc7",
            "id": "rtb-0f5d4f991953d4cc7",
            "owner_id": "838693051036",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c197294fff722b33",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "validator-rt"
            },
            "tags_all": {
              "Name": "validator-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0823e2a14f6aa023f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "838693051036",
            "id": "rtb-0f5d4f991953d4cc7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs.aws_internet_gateway.validator_igw",
            "module.ecs.aws_vpc.validator_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "validator_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eac599f8779b9033",
            "region": "us-east-1",
            "route_table_id": "rtb-0f5d4f991953d4cc7",
            "subnet_id": "subnet-09d712845cafa5f2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_internet_gateway.validator_igw",
            "module.ecs.aws_route_table.validator_rt",
            "module.ecs.aws_subnet.validator_subnet_1",
            "module.ecs.aws_vpc.validator_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "validator_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838693051036:security-group/sg-08cac865d80460825",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cac865d80460825",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "validator-sg20251014192546437700000003",
            "name_prefix": "validator-sg",
            "owner_id": "838693051036",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "validator-sg"
            },
            "tags_all": {
              "Name": "validator-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0823e2a14f6aa023f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "838693051036",
            "id": "sg-08cac865d80460825",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs.aws_vpc.validator_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "validator_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838693051036:subnet/subnet-09d712845cafa5f2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d712845cafa5f2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "838693051036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "validator-subnet-1"
            },
            "tags_all": {
              "Name": "validator-subnet-1"
            },
            "vpc_id": "vpc-0823e2a14f6aa023f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "838693051036",
            "id": "subnet-09d712845cafa5f2a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs.aws_vpc.validator_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "validator_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838693051036:subnet/subnet-0326c3f0b0293b419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0326c3f0b0293b419",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "838693051036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "validator-subnet-2"
            },
            "tags_all": {
              "Name": "validator-subnet-2"
            },
            "vpc_id": "vpc-0823e2a14f6aa023f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "838693051036",
            "id": "subnet-0326c3f0b0293b419",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs.aws_vpc.validator_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "validator_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838693051036:vpc/vpc-0823e2a14f6aa023f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00153e4de13810109",
            "default_route_table_id": "rtb-0ad3a623f1b291a66",
            "default_security_group_id": "sg-094c21fb7a9543f53",
            "dhcp_options_id": "dopt-0eb5b52a67aba1f28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0823e2a14f6aa023f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad3a623f1b291a66",
            "owner_id": "838693051036",
            "region": "us-east-1",
            "tags": {
              "Name": "validator-vpc"
            },
            "tags_all": {
              "Name": "validator-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}